name:                nesasm
author:              alexdotc
version:             0.1.0.0
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable nesasm 
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Header
                     , Opcode
                     , Disassemble
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , binary
                     , bytestring
                     , transformers
                     , text
